# sql-agent-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.ja.md  README.md  config.example.yaml  config_loader.py  launch-mcp-server.sh  logging_config.py  mcp_server.py  pyproject.toml  sql_agent.py  sql_agent_cli.py  test_ssh_tunnel.py
test-requests/: test-final.sh  test-mcp-initialize.sh  test-mcp-list-sql-servers.sh  test-mcp-tools-list.sh  test-simple.sh  test-ytyng-blog-sql.sh  test_list_tools.py  test_mangazenkan_dev.py  test_mcp_lib.py
