[project]
name = "sql-agent-mcp-server"
version = "0.1.0"
description = "SQL Agent MCP Server - MySQL と Postgres に接続する MCP サーバー"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "fastmcp>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.1",
    "pydantic>=2.0.0",
    "sshtunnel>=0.4.0",
]

[project.scripts]
sql-agent-cli = "sql_agent_cli:main"
sql-agent-mcp-server = "mcp_server:main"

[project.optional-dependencies]
# uv sync --extra test
test = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# モノレポではなくフラット構成 (パッケージディレクトリ無し) のため、
# トップレベルの .py ファイルを明示的に列挙してホイールに含める。
include = [
    "config_loader.py",
    "logging_config.py",
    "mcp_server.py",
    "sql_agent.py",
    "sql_agent_cli.py",
]
